# kairos-platform

./: .gitignore  Makefile  README.md  manage.ps1
.github/workflows/: build_go.yml  test_ai.yml
ai_agents/autogen_swarm/: critic_agent.py  sql_agent.py
ai_agents/langgraph_flow/: analyst_workflow.py
ai_agents/nlp_core/: embeddings_bert.py  entity_spacy.py  requirements.txt
ai_agents/notebooks/: embedding_analysis.ipynb
api/openapi/: kairos.swagger.json
api/proto/v1/: kairos.proto
config/: feature_store.yaml  models.yaml
data_pipelines/: quality_checks.py
data_pipelines/ingestion/: load_to_bigquery.py  load_to_snowflake.py
data_pipelines/sql/: analytics_schema.sql  business_queries.sql  fraud_features.sql  user_stats.sql
deploy/: docker-compose.yaml
deploy/k8s/: redis-statefulset.yaml  server-deployment.yaml
docs/: setup_guide.md
scripts/: seed_fake_data.py  test_ds_flow.py  test_online_inference.py
sdk/: pyproject.toml
sdk/experiments/: train_model.py
sdk/kairos_sdk/: client.py
sdk/kairos_sdk/core/: definitions.py  kairos_pb2.py  kairos_pb2_grpc.py
sdk/kairos_sdk/online_store/: materializer.py
services/go-feature-server/: Dockerfile  go.mod
services/go-feature-server/cmd/: main.go
services/python-worker/: main.py
web_dashboard/backend/: main.py
web_dashboard/frontend/: app.js  index.html  style.css
